[package]
name = "touch-server"
version = "0.1.0"
edition = "2021"

[dependencies]
enigo = "0.6"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.6"
display-info = "0.5"
mouse_position = "0.1"
mdns-sd = "0.11"
hostname = "0.4"
libc = "0.2"
